--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           height="30"
           width="40"
           /></a>
-          <a href="https://www.youtube.com/c/coderops" target="blank"
+          <a href="https://www.youtube.com/c/UCQHz3IC5QV841o7368yQG2Q" target="blank"
           ><img
           align="center"
           src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg"
